# drf-versioned-models

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tox.yml
docs/: README.md  TODO.md  roadmap.md
docs/dev/: custom_version_meta.md  mvp.md
docs/todo/: TODO.md
docs/tutorials/: README.md  custom_is_active_field.md  custom_version_meta.md
drf_versioned_models/: apps.py  models.py  serializers.py  views.py  viewsets.py
drf_versioned_schemas/: models.py  routers.py  viewsets.py
example/: manage.py
example/courses/: models.py  serializers.py  tests.py  urls.py  views.py
example/courses/fixtures/: courses.json
example/courses/migrations/: 0001_initial.py
example/example/: settings.py  urls.py
example/products/: models.py
example/products/migrations/: 0001_initial.py
tests/: data.py  models.py  serializers.py  settings.py  test_apps.py  test_models.py  test_routers.py  test_serializers.py  test_views.py  test_viewsets.py  urls.py  views.py
tests/fixtures/: examples.json
